New code structure. Failed to get the slanted tiles working :(

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<title>Insurgente</title>
 		<script type="text/javascript" src="js/phaser.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
+		
+		<script type="text/javascript" src="js/Init.js"></script>
+		<script type="text/javascript" src="js/Load.js"></script>
+		<script type="text/javascript" src="js/MainMenu.js"></script>
+		<script type="text/javascript" src="js/InGame.js"></script>
+
 	</head>
 	<body>
 		<svg xmlns="http://www.w3.org/2000/svg" class="star">
@@ -16,8 +22,12 @@
 		<h1>Insurgente</h1>
 
 		<div class="g-wrapper">
-		<div id="m-game"></div>
+			<!-- <div id="m-game"></div> -->
+			<div id="n-game"></div>
 		</div>
-		<script type="text/javascript" src="js/huasteca.js"></script>
+
+		<script type="text/javascript" src="js/PreGame.js"></script>
+
+		<!-- <script type="text/javascript" src="js/huasteca.js"></script> -->
 	</body>
 </html>
