Main menu heavily improved

--- a/Pablo/index.html
+++ b/Pablo/index.html
@@ -2,7 +2,7 @@
 <html lang='pt'>
 	<head>
 		<meta charset="utf-8">
-		<title>Pablo</title>
+		<title>Pablo | Stefan Devai</title>
 		<script type="text/javascript" src="js/phaser.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		
