--- a/Pablo/index.html
+++ b/Pablo/index.html
@@ -20,5 +20,12 @@
 		</div>
 
 		<script type="text/javascript" src="js/PreGame.js"></script>
+		
+		<h2>Instruções</h2>
+		<p><ul>
+		<li>SETAS/WASD - Movimento/Pulo</li>
+		<li>Clicar, esperar e soltar - Lançar molotov</li>
+		<li>Espaço - Mover caixas</li>
+		</ul></p>
 	</body>
 </html>
