--- a/projects/index.html
+++ b/projects/index.html
@@ -3,16 +3,19 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+  	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Projects</title>
-  <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+  	<title>Projects</title>
+  	<meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
 ">
 
-  <link rel="stylesheet" href="/css/main.css">
-  <script src="/js/jquery-1.11.3.min.js"></script>
-  <script src="/js/main-scripts.js"></script>
+  	<link rel="stylesheet" href="/css/main.css">
+	<link rel="shortcut icon" href="/img/sdicon.ico">
+
+  	<script src="/js/jquery-1.11.3.min.js"></script>
+  	<script src="/js/main-scripts.js"></script>
 </head>
 
 
@@ -59,7 +62,7 @@
 	
 	<footer class="site-footer">
 	<section class="footer-content">
-	<p>Stefan Devai - 2015 | <a href="/contact/">Contact</a> | <a href="https://github.com/stefan-devai" target="_blank">GitHub</a> | <a href="http://opengameart.org/users/stellar" target="_blank">OpenGameArt</a></p>
+	<p>Stefan Devai - 2015 | <a href="/about/">About</a> | <a href="https://github.com/stefan-devai" target="_blank">GitHub</a> | <a href="http://opengameart.org/users/stellar" target="_blank">OpenGameArt</a></p>
 	</section>
 </footer>
 
