--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 
   	<title>Stefan Devai</title>
-  	<meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+  	<meta name="description" content="Stefan Devais's personal blog about game development, art, and politics.
 ">
 
   	<link rel="stylesheet" href="/css/main.css">
